Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20464

ldlm: fix use-after-put race in ldlm_flock_deadlock()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • Upstream, Lustre 2.15.9
    • None
    • 3
    • 9223372036854775807

      In `ldlm_flock_deadlock()`, the code accesses `bl_exp->exp_flock_hash` after calling `class_export_put(bl_exp)`, which can cause a use-after-free if the put drops the last reference and the export is destroyed.

            vrungta Vandana Rungta
            vrungta Vandana Rungta
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: