LU-20464 ldlm: fix use-after-put in ldlm_flock_deadlock

In ldlm_flock_deadlock(), the code accesses bl_exp->exp_flock_hash
after calling class_export_put(bl_exp). If the put drops the last
reference, the export may be destroyed by the zombie workqueue
before the hash access, causing a use-after-free.

Reorder the operations to access the hash while the reference is
still held.

Fixes: 6a073773939c ("LU-1601 ldlm: Fix flock detection for different mounts")
Signed-off-by: Vandana Rungta <vrungta@amazon.com>
Change-Id: I449ffb138122d064fac792b99780515511cc2850
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/67135
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Yang Sheng <ys@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Timothy Day <timday@thelustrecollective.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>